Startups cript change